[gd_scene load_steps=61 format=3 uid="uid://1b4yf4ut7syd"]

[ext_resource type="Script" uid="uid://borr2ncrmxpdk" path="res://scripts/bush.gd" id="1_5x1sn"]
[ext_resource type="Texture2D" uid="uid://b4iht4ckusxaf" path="res://Images/Bush/Bush_Monster-Attack.png" id="2_r6it2"]
[ext_resource type="Texture2D" uid="uid://cig0yuvm3ogfv" path="res://Images/Bush/Bush_Monster-Die.png" id="3_jyslo"]
[ext_resource type="Texture2D" uid="uid://d10ddnlfjhu3a" path="res://Images/Bush/Bush_Monster-Hit.png" id="4_8vpta"]
[ext_resource type="Texture2D" uid="uid://clpagauooxywq" path="res://Images/Bush/Bush_Monster-Idle.png" id="5_ent8k"]
[ext_resource type="Texture2D" uid="uid://c4wtocsymhfhh" path="res://Images/Bush/Bush_Monster-Run.png" id="6_rri8r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eh23g"]
atlas = ExtResource("2_r6it2")
region = Rect2(0, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcyl2"]
atlas = ExtResource("2_r6it2")
region = Rect2(90, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5rpu"]
atlas = ExtResource("2_r6it2")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwuue"]
atlas = ExtResource("2_r6it2")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbiwj"]
atlas = ExtResource("2_r6it2")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vteyy"]
atlas = ExtResource("2_r6it2")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0nvf"]
atlas = ExtResource("2_r6it2")
region = Rect2(540, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhawb"]
atlas = ExtResource("2_r6it2")
region = Rect2(630, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgup6"]
atlas = ExtResource("2_r6it2")
region = Rect2(720, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e84t6"]
atlas = ExtResource("2_r6it2")
region = Rect2(810, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2ukg"]
atlas = ExtResource("2_r6it2")
region = Rect2(900, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66f6h"]
atlas = ExtResource("2_r6it2")
region = Rect2(990, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4353d"]
atlas = ExtResource("2_r6it2")
region = Rect2(1080, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4073l"]
atlas = ExtResource("2_r6it2")
region = Rect2(1170, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3dua"]
atlas = ExtResource("2_r6it2")
region = Rect2(1260, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ywxu"]
atlas = ExtResource("2_r6it2")
region = Rect2(1350, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3fm8"]
atlas = ExtResource("2_r6it2")
region = Rect2(1440, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpx48"]
atlas = ExtResource("2_r6it2")
region = Rect2(1530, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8h5p"]
atlas = ExtResource("3_jyslo")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_stajj"]
atlas = ExtResource("3_jyslo")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88o3m"]
atlas = ExtResource("3_jyslo")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxcfo"]
atlas = ExtResource("3_jyslo")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_elb1w"]
atlas = ExtResource("3_jyslo")
region = Rect2(540, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vo60"]
atlas = ExtResource("3_jyslo")
region = Rect2(630, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_msed6"]
atlas = ExtResource("3_jyslo")
region = Rect2(720, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0evyg"]
atlas = ExtResource("3_jyslo")
region = Rect2(810, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3unxr"]
atlas = ExtResource("3_jyslo")
region = Rect2(900, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00071"]
atlas = ExtResource("3_jyslo")
region = Rect2(990, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3dn0"]
atlas = ExtResource("3_jyslo")
region = Rect2(1080, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibu3o"]
atlas = ExtResource("3_jyslo")
region = Rect2(1170, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8o13"]
atlas = ExtResource("4_8vpta")
region = Rect2(0, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x08ll"]
atlas = ExtResource("4_8vpta")
region = Rect2(90, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yn8o"]
atlas = ExtResource("4_8vpta")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_53wjf"]
atlas = ExtResource("4_8vpta")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgpld"]
atlas = ExtResource("5_ent8k")
region = Rect2(0, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8ncd"]
atlas = ExtResource("5_ent8k")
region = Rect2(90, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66685"]
atlas = ExtResource("5_ent8k")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yytyx"]
atlas = ExtResource("5_ent8k")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub7bl"]
atlas = ExtResource("5_ent8k")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_utvbp"]
atlas = ExtResource("5_ent8k")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvsnf"]
atlas = ExtResource("5_ent8k")
region = Rect2(540, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvlpy"]
atlas = ExtResource("5_ent8k")
region = Rect2(630, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vaq4"]
atlas = ExtResource("6_rri8r")
region = Rect2(0, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r1s2"]
atlas = ExtResource("6_rri8r")
region = Rect2(90, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f7xt"]
atlas = ExtResource("6_rri8r")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kerqp"]
atlas = ExtResource("6_rri8r")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeson"]
atlas = ExtResource("6_rri8r")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ialfo"]
atlas = ExtResource("6_rri8r")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc5qo"]
atlas = ExtResource("6_rri8r")
region = Rect2(540, 0, 90, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0h6n3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh23g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcyl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5rpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwuue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbiwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vteyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0nvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhawb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgup6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e84t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2ukg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66f6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4353d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4073l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3dua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ywxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3fm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpx48")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8h5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stajj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88o3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxcfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elb1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vo60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msed6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0evyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3unxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00071")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3dn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibu3o")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8o13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x08ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yn8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53wjf")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgpld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8ncd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66685")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yytyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub7bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utvbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvsnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvlpy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vaq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r1s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f7xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kerqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeson")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ialfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc5qo")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cnq2i"]
radius = 18.0
height = 98.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2rql"]
size = Vector2(89.0627, 7.7837)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmnfg"]
size = Vector2(131, 75.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdin6"]
size = Vector2(120, 68)

[node name="Bush" type="CharacterBody2D"]
script = ExtResource("1_5x1sn")

[node name="Sprite2D2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1.99999, -47)
scale = Vector2(2.03844, 2.04483)
sprite_frames = SubResource("SpriteFrames_0h6n3")
animation = &"attack"
frame = 12
frame_progress = 0.696428
offset = Vector2(5, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(12, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cnq2i")

[node name="Area2D" type="Area2D" parent="."]
priority = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10.5, -6.49997)
rotation = 3.14159
scale = Vector2(1.2014, -7.323)
shape = SubResource("RectangleShape2D_b2rql")

[node name="HitBox" type="Area2D" parent="."]
priority = 10

[node name="CollisionBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2(8.5, -15.25)
shape = SubResource("RectangleShape2D_dmnfg")
disabled = true

[node name="Vision" type="Area2D" parent="."]
priority = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2(8, -12)
shape = SubResource("RectangleShape2D_qdin6")
debug_color = Color(0.560784, 0.560784, 0, 0.141176)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
